--- a/style.css
+++ b/style.css
@@ -1,19 +1,251 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-  
-  .body {
+  } */
+
+body {
     min-width: 480px;
     min-height: 100vh;
-    font-family: 'Arial', sans-serif;
-    font-size: 16px;
-    color: #fff;
+    /* font-family: 'Arial', sans-serif; */
+    font-family: 'Hina Mincho', serif;
+    letter-spacing: 1px;
+    color: rgb(215, 215, 215);
     text-align: center;
-    background-color: aquamarine;
-    background-blend-mode: multiply;    
-    //background-image: url("./assets/home.png");//
-    
-    
-  }
+    justify-content: center;
+    background-blend-mode: multiply;
+    background: center/cover, rgba(0, 0, 0, 0.5);
+    background-image: url("./assets/home.png");
+}
+
+.first-step {
+    width: 100%;
+    height: 95%;
+}
+
+
+h1 {
+    text-shadow: rgb(148, 14, 14) 1px 0 10px;
+    margin: 15px;
+}
+
+h3 {
+    margin: 10px;
+    font-size: 1.5em;
+}
+
+.cards-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    width: 80%;
+    height: 50vh;          
+    align-items: center;    
+}
+
+.azathoth,
+.cthulhu,
+.iogSothoth,
+.shubNiggurath {
+    margin: 1%;
+    height: 100%;
+    width: 23%;  
+    background-blend-mode: multiply;   
+    border-radius: 15px;
+}
+
+.card {
+    height: 100%;
+    width: 90%;
+    border-radius: 5%;
+    transition: 1s
+}
+
+.card:hover {
+    transform: scale(1.5);
+    box-shadow: 0 0 15px;
+}
+
+.level-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    width: 80%;
+    height: 7vh;          
+    align-items: center; 
+    gap: 1%;
+    overflow: hidden;
+}
+
+.level-button {
+    width: 15%;
+    height: 90%;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(21, 32, 22); 
+    color: rgb(206, 206, 210);
+    border-radius: 7px;
+    font-size: 1em;
+    font-family: 'Hina Mincho', serif;
+    letter-spacing: 1px;
+}
+
+.level-button:hover {   
+    box-shadow: 0 0 5px;
+}
+
+.blend-button,
+.back-button {
+    width: 20%;
+    height: 7vh;
+    font-size: 1.2em;
+    margin: 25px auto;
+    border: none;
+    cursor: pointer;
+    background-color: rgb(70, 10, 10); 
+    color: aliceblue;
+    border-radius: 7px;
+    font-family: 'Hina Mincho', serif;
+    letter-spacing: 1px;
+}
+
+.blend-button:hover,
+.back-button:hover {
+    box-shadow: 0 0 5px;
+}
+
+.second-step {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.halfs {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+}
+
+.half1 {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.half2 {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.steps {    
+    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 25px;
+    font-size: 1.5em;
+    margin: 30px 0px;
+}
+
+p {
+    font-size: 1.2em;   
+}
+
+.green1,
+.brown1,
+.blue1,
+.green2,
+.brown2,
+.blue2,
+.green3,
+.brown3,
+.blue3 {
+    height: 60px;
+    width: 60px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-weight: 800;       
+    border-radius: 50%;
+}
+
+.green1,
+.green2,
+.green3 {
+background-color: rgb(16, 152, 43);
+}
+
+.brown1,
+.brown2,
+.brown3 {
+background-color: rgb(109, 52, 6);
+}
+
+.blue1,
+.blue2,
+.blue3 {
+background-color: rgb(84, 107, 240);
+}
+
+
+.deck-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;           
+    align-items: center;   
+    width: 90%;
+    height: 60vh;
+}
+
+
+.shirt,
+.deck {
+    margin: 1%;
+    height: 100%;
+    width: 40%;  
+    background-blend-mode: multiply;   
+    border-radius: 15px;
+}
+
+.shirt:hover,
+.deck:hover {
+    box-shadow: 0 0 15px;
+}
+
+.card-shirt {    
+    height: 100%;
+    width: 100%;
+    border-radius: 5%;
+    transition: 1s;    
+}
+
+
+/* Вспомогательные стили */
+
+.tap5px {
+    box-shadow: 0 0 5px;
+}
+
+.tap15px {
+    box-shadow: 0 0 15px;
+}
+
+.hidden {
+    display: none;
+}
+
+.block {
+    display: block;
+}
