--- a/style.css
+++ b/style.css
@@ -59,11 +59,15 @@ h3 {
     height: 100%;
     width: 90%;
     border-radius: 5%;
-    transition: 1s
+    transition: 0.5s
 }
 
 .card:hover {
-    transform: scale(1.5);
+    transform: scale(1.5);    
+}
+
+.active {
+    /* transform: scale(0.5); */
     box-shadow: 0 0 15px;
 }
 
@@ -73,7 +77,7 @@ h3 {
     justify-content: center;
     margin: 0 auto;
     width: 80%;
-    height: 7vh;          
+    height: 10vh;          
     align-items: center; 
     gap: 1%;
     overflow: hidden;
@@ -81,7 +85,7 @@ h3 {
 
 .level-button {
     width: 15%;
-    height: 90%;
+    height: 60%;
     border: none;
     cursor: pointer;
     background-color: rgb(21, 32, 22); 
@@ -143,6 +147,12 @@ h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.card-text,
+.level-text {
+    text-align: start;
+    font-size: 1.2em;
 }
 
 .steps {    
