--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     min-width: 480px;
     min-height: 100vh;
     /* font-family: 'Arial', sans-serif; */
-    font-family: 'Hina Mincho', serif;
+    font-family: 'Cormorant Infant', serif;
     letter-spacing: 1px;
     color: rgb(215, 215, 215);
     text-align: center;
@@ -64,11 +64,13 @@ h3 {
 
 .card:hover {
     transform: scale(1.5);    
+    box-shadow: 0 0 5px;
+    cursor: pointer;
 }
 
 .active {
     /* transform: scale(0.5); */
-    box-shadow: 0 0 15px;
+    box-shadow: 0 0 15px red;
 }
 
 .level-wrapper {
@@ -92,7 +94,8 @@ h3 {
     color: rgb(206, 206, 210);
     border-radius: 7px;
     font-size: 1em;
-    font-family: 'Hina Mincho', serif;
+    font-family: 'Cormorant Infant', serif;
+    font-weight: 700;
     letter-spacing: 1px;
 }
 
@@ -111,7 +114,8 @@ h3 {
     background-color: rgb(70, 10, 10); 
     color: aliceblue;
     border-radius: 7px;
-    font-family: 'Hina Mincho', serif;
+    font-family: 'Cormorant Infant', serif;
+    font-weight: 700;
     letter-spacing: 1px;
 }
 
@@ -134,25 +138,30 @@ h3 {
 }
 
 .half1 {
+    padding-top: 10px;
     width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: center;     
 }
 
 .half2 {
     width: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .card-text,
 .level-text {
-    text-align: start;
-    font-size: 1.2em;
+    width: 100%;
+    font-size: 1.5em;
+    margin-bottom: 2%;
+    text-align: left;
+    font-weight: 700;
+}
+
+.level-text {
+    margin-bottom: 6%;
 }
 
 .steps {    
@@ -165,6 +174,7 @@ h3 {
     gap: 25px;
     font-size: 1.5em;
     margin: 30px 0px;
+    font-weight: 700;
 }
 
 p {
@@ -185,27 +195,28 @@ p {
     display: flex;
     text-align: center;
     justify-content: center;
-    align-items: center;
-    font-weight: 800;       
+    align-items: center;    
+    font-weight: 700;       
     border-radius: 50%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .green1,
 .green2,
 .green3 {
-background-color: rgb(16, 152, 43);
+background-color: rgb(1, 54, 11);
 }
 
 .brown1,
 .brown2,
 .brown3 {
-background-color: rgb(109, 52, 6);
+background-color: rgb(65, 30, 1);
 }
 
 .blue1,
 .blue2,
 .blue3 {
-background-color: rgb(84, 107, 240);
+background-color: rgb(4, 15, 77);
 }
 
 
@@ -216,7 +227,7 @@ background-color: rgb(84, 107, 240);
     margin: 0 auto;           
     align-items: center;   
     width: 90%;
-    height: 60vh;
+    height: 60vh;    
 }
 
 
@@ -229,9 +240,9 @@ background-color: rgb(84, 107, 240);
     border-radius: 15px;
 }
 
-.shirt:hover,
-.deck:hover {
+.shirt:hover {
     box-shadow: 0 0 15px;
+    cursor: pointer;
 }
 
 .card-shirt {    
