--- a/style.css
+++ b/style.css
@@ -63,13 +63,12 @@ h3 {
 }
 
 .card:hover {
-    transform: scale(1.5);    
+    transform: scale(1.2);    
     box-shadow: 0 0 5px;
     cursor: pointer;
 }
 
 .active {
-    /* transform: scale(0.5); */
     box-shadow: 0 0 15px red;
 }
 
@@ -79,7 +78,7 @@ h3 {
     justify-content: center;
     margin: 0 auto;
     width: 80%;
-    height: 10vh;          
+    height: 8vh;          
     align-items: center; 
     gap: 1%;
     overflow: hidden;
@@ -87,7 +86,7 @@ h3 {
 
 .level-button {
     width: 15%;
-    height: 60%;
+    height: 70%;
     border: none;
     cursor: pointer;
     background-color: rgb(21, 32, 22); 
@@ -108,7 +107,7 @@ h3 {
     width: 20%;
     height: 7vh;
     font-size: 1.2em;
-    margin: 25px auto;
+    margin: 10px auto;
     border: none;
     cursor: pointer;
     background-color: rgb(70, 10, 10); 
@@ -149,6 +148,7 @@ h3 {
     width: 60%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .card-text,
@@ -230,12 +230,12 @@ background-color: rgb(4, 15, 77);
     height: 60vh;    
 }
 
-
 .shirt,
 .deck {
     margin: 1%;
     height: 100%;
-    width: 40%;  
+    width: 35%;  
+    background: center/cover;
     background-blend-mode: multiply;   
     border-radius: 15px;
 }
@@ -251,6 +251,34 @@ background-color: rgb(4, 15, 77);
     border-radius: 5%;
     transition: 1s;    
 }
+
+.deck {
+    background-image: url('./assets/mythicCards/blue/blue1.png');
+}
+
+
+
+footer {
+ position: absolute;  
+  width: 99%;  
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: .6em;
+  }
+  
+  .logo {
+    display: block;
+    opacity: 0.5;
+  }
+
+  .logo:hover {
+    opacity: 1;
+  }
+
+
 
 
 /* Вспомогательные стили */
