--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 body {
     min-width: 480px;
-    min-height: 100vh;
-    /* font-family: 'Arial', sans-serif; */
+    min-height: 100vh;    
     font-family: 'Cormorant Infant', serif;
     letter-spacing: 1px;
     color: rgb(215, 215, 215);
@@ -116,6 +115,7 @@ h3 {
     font-family: 'Cormorant Infant', serif;
     font-weight: 700;
     letter-spacing: 1px;
+    z-index: 50;
 }
 
 .blend-button:hover,
@@ -227,14 +227,14 @@ background-color: rgb(4, 15, 77);
     margin: 0 auto;           
     align-items: center;   
     width: 90%;
-    height: 60vh;    
+    height: 67vh;    
 }
 
 .shirt,
 .deck {
-    margin: 1%;
+    margin: 2%;
     height: 100%;
-    width: 35%;  
+    width: 40%;  
     background: center/cover;
     background-blend-mode: multiply;   
     border-radius: 15px;
@@ -254,13 +254,14 @@ background-color: rgb(4, 15, 77);
 
 .deck {
     transition: all 0.2s ease;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.3);
 }
 
 
 
 footer {
  position: absolute;  
+ bottom: 20px;
   width: 99%;  
   display: flex;
   justify-content: end;
