--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     min-width: 480px;
-    min-height: 100vh;    
+    min-height: 100vh;
     font-family: 'Cormorant Infant', serif;
     letter-spacing: 1px;
     color: rgb(215, 215, 215);
@@ -39,8 +39,8 @@ h3 {
     justify-content: center;
     margin: 0 auto;
     width: 80%;
-    height: 50vh;          
-    align-items: center;    
+    height: 50vh;
+    align-items: center;
 }
 
 .azathoth,
@@ -49,8 +49,8 @@ h3 {
 .shubNiggurath {
     margin: 1%;
     height: 100%;
-    width: 23%;  
-    background-blend-mode: multiply;   
+    width: 23%;
+    background-blend-mode: multiply;
     border-radius: 15px;
 }
 
@@ -62,7 +62,7 @@ h3 {
 }
 
 .card:hover {
-    transform: scale(1.2);    
+    transform: scale(1.2);
     box-shadow: 0 0 5px;
     cursor: pointer;
 }
@@ -77,8 +77,8 @@ h3 {
     justify-content: center;
     margin: 0 auto;
     width: 80%;
-    height: 8vh;          
-    align-items: center; 
+    height: 8vh;
+    align-items: center;
     gap: 1%;
     overflow: hidden;
 }
@@ -88,7 +88,7 @@ h3 {
     height: 70%;
     border: none;
     cursor: pointer;
-    background-color: rgb(21, 32, 22); 
+    background-color: rgb(21, 32, 22);
     color: rgb(206, 206, 210);
     border-radius: 7px;
     font-size: 1em;
@@ -97,19 +97,19 @@ h3 {
     letter-spacing: 1px;
 }
 
-.level-button:hover {   
+.level-button:hover {
     box-shadow: 0 0 5px;
 }
 
 .blend-button,
 .back-button {
-    width: 20%;
+    width: 20vw;
     height: 7vh;
     font-size: 1.2em;
     margin: 10px auto;
     border: none;
     cursor: pointer;
-    background-color: rgb(70, 10, 10); 
+    background-color: rgb(70, 10, 10);
     color: aliceblue;
     border-radius: 7px;
     font-family: 'Cormorant Infant', serif;
@@ -141,7 +141,7 @@ h3 {
     width: 30%;
     display: flex;
     flex-direction: column;
-    align-items: center;     
+    align-items: center;
 }
 
 .half2 {
@@ -164,7 +164,7 @@ h3 {
     margin-bottom: 6%;
 }
 
-.steps {    
+.steps {
     height: 5vh;
     display: flex;
     flex-direction: row;
@@ -178,7 +178,7 @@ h3 {
 }
 
 p {
-    font-size: 1.2em;   
+    font-size: 1.2em;
 }
 
 .green1,
@@ -195,8 +195,8 @@ p {
     display: flex;
     text-align: center;
     justify-content: center;
-    align-items: center;    
-    font-weight: 700;       
+    align-items: center;
+    font-weight: 700;
     border-radius: 50%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -204,19 +204,19 @@ p {
 .green1,
 .green2,
 .green3 {
-background-color: rgb(1, 54, 11);
+    background-color: rgb(1, 54, 11);
 }
 
 .brown1,
 .brown2,
 .brown3 {
-background-color: rgb(65, 30, 1);
+    background-color: rgb(65, 30, 1);
 }
 
 .blue1,
 .blue2,
 .blue3 {
-background-color: rgb(4, 15, 77);
+    background-color: rgb(4, 15, 77);
 }
 
 
@@ -224,19 +224,19 @@ background-color: rgb(4, 15, 77);
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 0 auto;           
-    align-items: center;   
+    margin: 0 auto;
+    align-items: center;
     width: 90%;
-    height: 67vh;    
+    height: 67vh;
 }
 
 .shirt,
 .deck {
     margin: 2%;
     height: 100%;
-    width: 40%;  
+    width: 40%;
     background: center/cover;
-    background-blend-mode: multiply;   
+    background-blend-mode: multiply;
     border-radius: 15px;
 }
 
@@ -245,11 +245,11 @@ background-color: rgb(4, 15, 77);
     cursor: pointer;
 }
 
-.card-shirt {    
+.card-shirt {
     height: 100%;
     width: 100%;
     border-radius: 5%;
-    transition: 1s;    
+    transition: 1s;
 }
 
 .deck {
@@ -258,27 +258,26 @@ background-color: rgb(4, 15, 77);
 }
 
 
-
 footer {
- position: absolute;  
- bottom: 20px;
-  width: 99%;  
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  gap: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: .6em;
-  }
-  
-  .logo {
+    position: absolute;
+    bottom: 1%;
+    width: 99%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .6em;
+}
+
+.logo {
     display: block;
     opacity: 0.5;
-  }
+}
 
-  .logo:hover {
+.logo:hover {
     opacity: 1;
-  }
+}
 
 
 
