--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   } */
 
 body {
-    min-width: 480px;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     font-family: 'Cormorant Infant', serif;
     letter-spacing: 1px;
     color: rgb(215, 215, 215);
@@ -253,11 +253,21 @@ p {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     border-radius: 20px;
+    position: relative;
 }
 
 .shirt:hover {
     box-shadow: 0 0 15px;
     cursor: pointer;
+}
+
+.tap {
+    position: absolute;
+    top: 38%;
+    left: 33%;
+    opacity: 0.5;
+    font-size: 60px;
+    font-weight: 700;
 }
 
 .card-shirt {
@@ -275,8 +285,6 @@ p {
 }
 
 footer {
-    position: absolute;
-    bottom: 1%;
     width: 99%;
     display: flex;
     justify-content: end;
@@ -320,12 +328,12 @@ footer {
     }
 
     .level-wrapper {
-        height: 13vh;
+        height: 60px;
     }
 
     .blend-button,
     .back-button {
-        height: 13vh;
+        height: 60px;
     }
 
     .half1 {
@@ -339,12 +347,24 @@ footer {
     .deck-wrapper {
         height: 54vh;
     }
+
+    .tap {           
+        font-size: 40px;       
+    }
 }
 
 @media (max-width: 650px) {
-   
+
     body {
         min-height: auto;
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: 1em;
     }
 
     .cards-wrapper {
@@ -367,16 +387,16 @@ footer {
         margin: 0 auto;
     }
 
-    .azathoth,    
-    .iogSothoth {        
-        justify-content: flex-end;        
+    .azathoth,
+    .iogSothoth {
+        justify-content: flex-end;
     }
 
     .level-wrapper {
         display: grid;
-        grid-template-columns: 1fr;   
-        gap: 10px;    
-        height: auto; 
+        grid-template-columns: 1fr;
+        gap: 10px;
+        height: auto;
     }
 
     .level-button {
@@ -392,26 +412,29 @@ footer {
     }
 
     .halfs {
-        display: grid;
-        grid-template-columns: 1 fr;
+        flex-direction: column;
         margin: 0 auto;
     }
 
+    
     .half1,
     .half2 {
         width: 100%;
     }
 
-    .deck-wrapper {        
+    .steps {
+        height: 10px;
+    }
+    .deck-wrapper {
         display: flex;
-        flex-direction: column;   
-        height: 70vh; 
-        gap: 0px;      
+        flex-direction: column;
+        height: 400px;
+        gap: 0px;
     }
 
     .deck {
-        height: 246px;
-    width: 190px;
+        height: 290px;
+        width: 190px;
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -421,7 +444,13 @@ footer {
         width: 190px;
     }
 
-    footer {
-        display: none;
+    .tap {    
+       top: 10px;    
+        font-size: 30px;       
     }
+
+    footer {
+        justify-content: center;
+    }
+
 }
