--- a/style.css
+++ b/style.css
@@ -368,9 +368,10 @@ footer {
     }
 
     .cards-wrapper {
+        height: 150px;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 200px 200px;
         gap: 10px;
     }
 
@@ -383,7 +384,7 @@ footer {
         justify-content: center;
         margin: 1%;
         height: 100%;
-        width: 70%;
+        width: 100%;
         margin: 0 auto;
     }
 
